<resources>
    <string name="app_name">My own Application</string>
    <string name="movies_list">Movies list</string>
    <string name="_13">13+</string>
    <string name="_137_min">137 MIN</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="_125_reviews">125 REVIEWS</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
</resources>