<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_details_mini"
    android:background="@drawable/img_backgrounf_for_layout">

    <ImageView
        android:id="@+id/img_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/img_movie"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/img_background_gradient_mini"
        app:layout_constraintBottom_toBottomOf="@id/img_movie"
        app:layout_constraintEnd_toEndOf="@id/img_movie"
        app:layout_constraintStart_toStartOf="@id/img_movie"
        app:layout_constraintTop_toTopOf="@id/img_movie" />


    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_rectangle"
        android:paddingStart="2dp"
        android:paddingTop="4dp"
        android:paddingEnd="2dp"
        android:paddingBottom="4dp"
        android:text="@string/_13"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@id/img_movie"
        app:layout_constraintTop_toTopOf="@id/img_movie" />

    <ImageButton
        android:id="@+id/btn_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="6dp"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_like"
        app:layout_constraintEnd_toEndOf="@id/img_movie"
        app:layout_constraintTop_toTopOf="@id/img_movie" />


    <RatingBar
        android:id="@+id/rating_bar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:numStars="5"
        android:progressBackgroundTint="#6D6D80"
        android:progressTint="#FF3365"
        android:rating="4"
        app:layout_constraintBottom_toBottomOf="@id/img_movie"
        app:layout_constraintStart_toStartOf="@id/img_movie" />

    <TextView
        android:id="@+id/tv_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="9dp"
        android:text="@string/_125_reviews"
        android:textColor="#6D6D80"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img_movie"
        app:layout_constraintStart_toEndOf="@id/rating_bar" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/action_adventure_fantasy"
        android:textColor="#FF3466"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/rating_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/img_movie" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/avengers_end_game"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_movie" />

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_137_min"
        android:textColor="#565665"
        android:textSize="10sp"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


</androidx.constraintlayout.widget.ConstraintLayout>

